--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -68,7 +68,7 @@ ion-content { --background: var(--app-background); }
 }
 
 .new-button {
-  --color: var(--ion-color-primary);
+  /* No custom color - using default */
 }
 
 .filter-button {
