--- a/src/app/filter/filter.page.html
+++ b/src/app/filter/filter.page.html
@@ -41,7 +41,7 @@
                 <h5>{{ project.title }}</h5>
                 <p>{{ project.description }}</p>
                 <div class="project-meta">
-                  <span class="scope">{{ 'NEW_ITEM.SCOPE_' + project.scope.toUpperCase() | translate }}</span>
+                  <span class="scope">{{ 'NEW_ITEM.SCOPE_' + getScopeValue(project.scope).toUpperCase() | translate }}</span>
                   <span class="state">{{ 'HOME.STATE_' + project.state.toUpperCase() | translate }}</span>
                 </div>
               </div>
