--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -32,6 +32,7 @@ ion-header {
     display: flex;
     align-items: center;
     gap: 1rem;
+    margin: 15px 0;
     
     .profile-avatar {
       width: 60px;
