--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -20,6 +20,16 @@
     align-items: center;
     flex-direction: row;
     padding: 16px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    
+    &:hover {
+      background-color: var(--app-card-hover-background);
+    }
+    
+    &:active {
+      background-color: var(--app-card-hover-background);
+    }
 
     .project-title-line {
       display: flex;
